--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(binaryLog)
 export(check.integer)
 export(commonLog)
 export(cube)
+export(fact_func)
 export(naturalLog)
 export(nthFibonacci)
 export(nthroot)
 export(reciprocal)
 export(square)
+export(sum_series)
